# whatchamacallit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
insituwebserver/: __main__.py  fastapi_server.py  make.py  server.py  test_make.py
whatchamacallit/: fastapi.py  fastapi_server.py  flask.py  make.py  test_make.py
whatchamacallit/examples/: fastapi_server.py  flask_server.py
