[tool.poetry]
name = "whatchamacallit"
version = "0.0.3"
description = "Use web resources the pythonic way, import JavaScript modules like you do with Python modules."
authors = ["Wolfgang Kühn"]
homepage = "https://github.com/decatur/whatchamacallit"
repository = "https://github.com/decatur/whatchamacallit"
license = "MIT"
readme = "README.md"
keywords = ["EcmaScript", "Module", "Import"]
classifiers = [
    "Programming Language :: JavaScript",
    "License :: OSI Approved :: MIT License"
]
packages = [
    { include = "whatchamacallit" }
]

[tool.poetry.dependencies]
python = "^3.6"
importlib-resources = { version = "^3.0", python = "<3.9" }

[tool.poetry.dev-dependencies]
pytest = "^4.0"
